tests/rpm-pkgs/qrencode-4.0.2-8.fc35/output-exp@valgrind/scan-results.err
Error: VALGRIND_WARNING:
qrencode-4.0.2/tests/.libs/test_bitstream: note: while executing process 430
qrencode-4.0.2/bitstream.c:37: warning[Leak_DefinitelyLost]: 152 (24 direct, 128 indirect) bytes in 1 blocks are definitely lost in loss record 4 of 4
qrencode-4.0.2/bitstream.c:37: note: called from BitStream_new()
qrencode-4.0.2/tests/test_bitstream.c:227: note: called from UnknownInlinedFun()
qrencode-4.0.2/tests/test_bitstream.c:247: note: called from main()
#   35|   	BitStream *bstream;
#   36|   
#   37|-> 	bstream = (BitStream *)malloc(sizeof(BitStream));
#   38|   	if(bstream == NULL) return NULL;
#   39|   

Error: VALGRIND_WARNING:
qrencode-4.0.2/tests/.libs/test_bitstream: note: while executing process 430
qrencode-4.0.2/bitstream.c:58: warning[Leak_DefinitelyLost]: 28 (24 direct, 4 indirect) bytes in 1 blocks are definitely lost in loss record 2 of 4
qrencode-4.0.2/bitstream.c:58: note: called from UnknownInlinedFun()
qrencode-4.0.2/bitstream.c:52: note: called from BitStream_newWithBits()
qrencode-4.0.2/tests/test_bitstream.c:213: note: called from UnknownInlinedFun()
qrencode-4.0.2/tests/test_bitstream.c:246: note: called from main()
#   56|   	if(size == 0) return BitStream_new();
#   57|   
#   58|-> 	bstream = (BitStream *)malloc(sizeof(BitStream));
#   59|   	if(bstream == NULL) return NULL;
#   60|   
